// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress styles should render with default styles 1`] = `
.circuit-0 {
  width: 100%;
  height: 2px;
  overflow: hidden;
  background-color: #EEF0F2;
  border-radius: 5px;
}

.circuit-0:after {
  content: '';
  display: block;
  background-color: #0F131A;
  -webkit-animation-name: animation-1sge5un-progressAnimation;
  animation-name: animation-1sge5un-progressAnimation;
  -webkit-animation-duration: 5000ms;
  animation-duration: 5000ms;
  -webkit-animation-play-state: running;
  animation-play-state: running;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  height: 100%;
}

<div
  className="circuit-0 circuit-1"
/>
`;

exports[`Progress styles should render with paused styles 1`] = `
.circuit-0 {
  width: 100%;
  height: 2px;
  overflow: hidden;
  background-color: #EEF0F2;
  border-radius: 5px;
}

.circuit-0:after {
  content: '';
  display: block;
  background-color: #0F131A;
  -webkit-animation-name: animation-1sge5un-progressAnimation;
  animation-name: animation-1sge5un-progressAnimation;
  -webkit-animation-duration: 5000ms;
  animation-duration: 5000ms;
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  height: 100%;
}

<div
  className="circuit-0 circuit-1"
/>
`;
